# CareerFlow-AI

./: .gitignore  README.md  pyproject.toml
agent/: agent.py  llm_config.py  prompt.py
agent/analysis_agent/: database_manager.py  prompt.py
agent/database_agent/: database_manager.py  prompt.py
agent/job_recommend_agent/: job_recommend_manager.py
agent/resume_agent/: prompt.py  resume_agent_manager.py
agent/tools/: __init__.py  a.py  analysis.py  citys.json  job_crawler.py
